--- a/Web-Dev/UI/Portfolio/styles.css
+++ b/Web-Dev/UI/Portfolio/styles.css
@@ -1,14 +1,29 @@
 body {
-  background-color: #f1e5d1;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: relative; /* Ensure body can contain absolutely positioned pseudo-element */
+  overflow-x: hidden; /* Prevent horizontal scrollbar due to fixed background */
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("Animation\ -\ 1718809749729.gif"); /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  z-index: -1; /* Ensure the pseudo-element is behind the content */
+  opacity: 0.7; /* Adjust opacity as needed */
 }
 header {
   background-color: #ffffff;
-  border: 2px solid #d1d8c5;
+  border: 2px solid black;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 .navbar {
   list-style-type: none;
@@ -17,40 +32,44 @@ header {
 .navbar a {
   color: black;
   margin: 10px;
-  border: 2px solid #d1d8c5;
-  background-color: antiquewhite;
+  border: 2px solid black;
+  background-color: #ffffff;
   border-radius: 5px;
   text-decoration: none;
   padding: 5px 8px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 .navbar a:hover {
-  background-color: #a0937d;
+  background-color: lightgray;
 }
 
 .heading {
-  background-color: #f9d689;
+  background-color: #ffffff;
   padding: 3px;
   text-align: center;
   margin: 50px auto;
   max-width: 350px;
-  border: 2px solid #fd9b63;
+  border: 2px solid black;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 .heading:hover {
-  background-color: #d1d8c5;
+  background-color: lightgrey;
 }
 
 .sub-heading {
   text-align: center;
-  background-color: #f9d689;
-  padding: 0px;
+  background-color: whitesmoke;
+  padding: 5px auto;
   text-align: center;
   margin: 10px auto;
   max-width: 200px;
-  border: 2px solid #fd9b63;
+  border: 2px solid black;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+}
+.sub-heading:hover {
+  background-color: #d1d8c5;
 }
 .skill-icons {
   text-align: center;
@@ -82,4 +101,76 @@ header {
 .contactinfo {
   text-align: center;
   padding-top: 20px;
+}
+footer {
+  background-color: gainsboro;
+  padding-top: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.project-div {
+  margin-left: 20px;
+  padding-bottom: 30px;
+}
+.project-name {
+  text-align: center;
+  padding: 20px;
+}
+.project-name a:hover {
+  color: aquamarine;
+}
+
+.exp {
+  border: 1px solid black;
+  max-width: 500px;
+  height: fit-content;
+  color: black;
+  margin: 10px;
+  border: 2px solid black;
+  background-color: #ffffff;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 5px 8px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  margin-left: 60%;
+}
+.exp p {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.about-box {
+  border: 1px solid black;
+  max-width: 500px;
+  height: fit-content;
+  color: black;
+  margin: 10px;
+  border: 2px solid black;
+  background-color: #ffffff;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 5px 8px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  margin-left: 10%;
+}
+.about-box p {
+  padding: 10px;
+}
+.about-box h2 {
+  border: 1px solid black;
+  max-width: 120px;
+  text-align: center;
+  height: fit-content;
+  color: black;
+  margin: 10px;
+  border: 2px solid #d1d8c5;
+  background-color: #ffffff;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 5px 8px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+}
+#skills {
+  padding-top: 30px;
 }
