--- a/Web-Dev/UI/Portfolio/styles.css
+++ b/Web-Dev/UI/Portfolio/styles.css
@@ -1,3 +1,5 @@
+/*! Body Section */
+
 body {
   position: relative; /* Ensure body can contain absolutely positioned pseudo-element */
   overflow-x: hidden; /* Prevent horizontal scrollbar due to fixed background */
@@ -10,81 +12,156 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("Animation\ -\ 1718809749729.gif"); /* Replace with your image path */
+  background-color: black;
   background-size: cover;
   background-position: center;
   z-index: -1; /* Ensure the pseudo-element is behind the content */
-  opacity: 0.7; /* Adjust opacity as needed */
 }
+
+/*? Headings */
 header {
-  background-color: #ffffff;
-  border: 2px solid black;
+  background-color: black;
+  border: 2px solid white;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 4px 8px rgba(255, 0, 0, 0.5);
+  max-width: fit-content;
+  padding-right: 25px;
+  margin-left: 25%;
 }
 .navbar {
   list-style-type: none;
   display: flex;
 }
 .navbar a {
-  color: black;
+  color: white;
   margin: 10px;
-  border: 2px solid black;
-  background-color: #ffffff;
+  border: 2px solid white;
+  background-color: black;
   border-radius: 5px;
   text-decoration: none;
-  padding: 5px 8px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  padding: 5px 8px 5px 8px;
+  box-shadow: 0px 4px 8px rgba(255, 0, 0, 0.5);
 }
 .navbar a:hover {
-  background-color: lightgray;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 
 .heading {
-  background-color: #ffffff;
+  background-color: black;
   padding: 3px;
   text-align: center;
   margin: 50px auto;
+  color: white;
   max-width: 350px;
-  border: 2px solid black;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  border: 2px solid white;
+  box-shadow: 0px 4px 8px rgba(255, 0, 0, 0.5);
   border-radius: 10px;
 }
 .heading:hover {
-  background-color: lightgrey;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 
 .sub-heading {
   text-align: center;
-  background-color: whitesmoke;
+  background-color: black;
   padding: 5px auto;
   text-align: center;
   margin: 10px auto;
   max-width: 200px;
-  border: 2px solid black;
+  border: 2px solid white;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+  color: white;
 }
 .sub-heading:hover {
-  background-color: #d1d8c5;
 }
-.skill-icons {
-  text-align: center;
-  margin-top: 20px;
+/*! About Section */
+
+.about-box {
+  border: 1px solid white;
+  max-width: 500px;
+  height: fit-content;
+  color: white;
+  margin: 10px;
+
+  background-color: black;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 5px 8px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  margin-left: 10%;
+}
+.about-box p {
+  padding: 10px;
 }
 
-.skill-icons {
-  font-size: 5em;
-  margin: 0 10px;
-  padding: 30px;
-  display: block;
+/*! Experience Section */
+
+.exp-box {
+  border: 1px solid white;
+  max-width: 500px;
+  height: fit-content;
+  color: white;
+  margin: 10px;
+
+  background-color: black;
+  border-radius: 5px;
+  text-decoration: none;
+  padding: 5px 8px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  margin-left: 60%;
 }
-#icons {
-  padding-left: 30px;
+.exp p {
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
+
+/*! Skill Section */
+
+.skill-png {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.skill-png img {
+  padding-right: 20px;
+  max-width: 100%;
+}
+/*! Project Section */
+
+.project-div {
+  margin-left: 20px;
+  padding-bottom: 30px;
+}
+.project-name {
+  text-align: center;
+  padding: 20px;
+  color: white;
+}
+.project-name a {
+  color: aliceblue;
+}
+.project-name a:hover {
+  color: aquamarine;
+}
+
+/*! FOOTER */
+
+footer {
+  background-color: gainsboro;
+  padding-top: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+/*! Social Media Section */
+
 .socialmedia-logo {
   max-width: 30px;
 }
@@ -98,79 +175,9 @@ header {
   padding: 20px;
 }
 
+/*! Contact Info Section */
+
 .contactinfo {
   text-align: center;
   padding-top: 20px;
-}
-footer {
-  background-color: gainsboro;
-  padding-top: 20px;
-  border: 1px solid black;
-  border-radius: 10px;
-}
-
-.project-div {
-  margin-left: 20px;
-  padding-bottom: 30px;
-}
-.project-name {
-  text-align: center;
-  padding: 20px;
-}
-.project-name a:hover {
-  color: aquamarine;
-}
-
-.exp {
-  border: 1px solid black;
-  max-width: 500px;
-  height: fit-content;
-  color: black;
-  margin: 10px;
-  border: 2px solid black;
-  background-color: #ffffff;
-  border-radius: 5px;
-  text-decoration: none;
-  padding: 5px 8px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
-  margin-left: 60%;
-}
-.exp p {
-  padding-top: 20px;
-  padding-bottom: 10px;
-}
-
-.about-box {
-  border: 1px solid black;
-  max-width: 500px;
-  height: fit-content;
-  color: black;
-  margin: 10px;
-  border: 2px solid black;
-  background-color: #ffffff;
-  border-radius: 5px;
-  text-decoration: none;
-  padding: 5px 8px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
-  margin-left: 10%;
-}
-.about-box p {
-  padding: 10px;
-}
-.about-box h2 {
-  border: 1px solid black;
-  max-width: 120px;
-  text-align: center;
-  height: fit-content;
-  color: black;
-  margin: 10px;
-  border: 2px solid #d1d8c5;
-  background-color: #ffffff;
-  border-radius: 5px;
-  text-decoration: none;
-  padding: 5px 8px;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
-}
-#skills {
-  padding-top: 30px;
 }
